--- a/books/Storyboards/AddManually.storyboard
+++ b/books/Storyboards/AddManually.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A320" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="xds-k5-GLF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="xds-k5-GLF">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -51,6 +54,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="nextButton" destination="QTN-8Z-LoW" id="Nbz-zA-L0t"/>
+                        <segue destination="af7-26-DUE" kind="show" identifier="editSubjectsSegue" id="tSb-fJ-oqB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gmG-Zu-fQn" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -84,6 +88,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5yp-ht-5Ct" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="38" y="994"/>
+        </scene>
+        <!--Book Subjects Form-->
+        <scene sceneID="sqH-Rf-PtL">
+            <objects>
+                <viewController id="af7-26-DUE" customClass="BookSubjectsForm" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="lii-es-l76"/>
+                        <viewControllerLayoutGuide type="bottom" id="Skj-zW-SJP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kP7-VX-zoB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="v0u-C6-ycp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-354" y="1746"/>
         </scene>
     </scenes>
 </document>
