More page tweaks

--- a/docs/_sass/_solo.scss
+++ b/docs/_sass/_solo.scss
@@ -41,12 +41,13 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   font-size: 2.5rem;
   margin-bottom: 1rem;
+	line-height: 50px;
 }
 
-@media (min-width: 35rem) {
+@media (min-width: 400px) {
   h1 {
-    font-size: 3rem;
     margin-bottom: 3rem;
+		line-height: 90px;
   }
 }
 
